# Dataset-Tools

./: .gitattributes  .gitignore  .pylintrc  2025-11-11-ok-so-i-managed-to-get-all-of-geminis-non-saniti.txt  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT_ROADMAP.md  FAQ.md  Info.plist  LICENSE  MOCKUP_README.md  MOMS_2AM_FEVER_DREAMS_README.md  NOTICE.md  PLAN_metadata_edit.md  README.md  SECURITY.md  SECURITY_TODO.md  STEP_UP_LANGUAGES_GUIDE.md  SVG_ICON_USAGE_GUIDE.md  TKinterWidgetsManual.md  USER_GUIDE.md  _version.py  activate.bash  activate.fish  activate.zsh  analyze_missing_nodes.py  analyze_tensorart.py  check_additional_samples.py  components.json  convert_icons_to_theme_compatible.py  convert_material_themes.py  debug_imports.py  install.bat  install.sh  install.sh.fish  monitor_app_resources.py  next.config.mjs  npm-shrinkwrap.json  package-lock.json  package.json  (+6 more)
.claude/agents/: workflow-traversal-strategist.md
.github/workflows/: claude.yml  codacy.yml  pytest.yml  python-publish.yml  summary.yml
.my_project_env_fart_deux_data/: pyvenv.cfg
app/: globals.css  layout.tsx  page.tsx
app/settings/: page.tsx
archive/: GEMINI_METADATA_ANALYSIS.md  components_backup_20250920_184226.py  fix_logging_fstrings.py  main_window_backup_20250920_192000.py  refine_font_weight.py  remove_all_font_styling.py  remove_box_shadow.py  remove_font_family.py  remove_font_size.py
archive/exif_output/: A111-SDXL.txt  A111NAIXL.txt  BaiscEXIFArt.txt  CanonAdobe.txt  ComfyUI.txt  ComfyUITEMP.txt  ComfyuiNotPickedup.txt  EXIFIphone7.txt  FluxKrea.txt  FoxFlux.txt  HiDreamComfyCore.txt  INvalidDogLemon.txt  Kolors.txt  Mijdourney.txt  MorenonAIpic.txt  NetaLumina.txt  NikonTestC2ase.txt  NikonTestCase.txt  NonAIData.txt  Noodles.txt  OldCamEXIF.txt  PromptCase.txt  ProperGAlaxyPrompt.txt  Random.txt  SD3.txt  SDNextCase.txt  T1P0_Usercomment.txt  TA-AIToolFlux.txt  TB_001.txt  TensorArtEXIF.txt  Text2Image.txt  Toyotapic.txt  everything 2.txt  everything.txt  everything010.txt  everything2.txt  everything3.txt  everything4.txt  everything5.txt  everything6.txt  (+4 more)
archive/refactor_prototype/: V2_PLAN.md  image_utils.py  main.py  metadata_parser.py  model.py  requirements.txt  theme_manager.py  views.py
components/: ComfyUIWorkflowViewer.tsx  file-tree.tsx  file-view.tsx  image-preview.tsx  image-upload.tsx  metadata-edit-dialog.tsx  metadata-panel.tsx  navbar.tsx  safetensors-panel.tsx  thumbnail-viewport.tsx
components/data-grid/: data-grid.tsx
components/optics/: tooltip.jsx
components/ui/: alert-dialog.tsx  glowingbordercard.tsx  theme-customizer.tsx  theme-toggle.tsx
config/: rules.toml
dataset_tools/: __init__.py  access_disk.py  background_operations.py  civitai_api.py  cli_parse.py  correct_types.py  debug_a1111_detection.py  debug_comfyui_detection.py  debug_parser_matching.py  debug_specific_workflow.py  debug_subrules.py  dispatcher.py  display_formatter.py  event_handlers.py  file_operations.py  forge_version_test.py  logger.py  main.py  metadata_engine.py  metadata_parser.py  model_tool.py  numpy_scorer.py  parser_registry.py  prepare_workflows_for_analysis.py  rule_evaluator.py  test_a1111_simple.py  test_airs.py  test_civitai_mojibake.py  test_civitai_priority_fix.py  test_civitai_structure.py  test_comfyui_analyzer.py  test_enhanced_integration.py  test_extrametadata.py  test_final_output.py  test_find_prompts.py  test_find_sampler.py  test_forge_detection.py  test_json_path_query_fix.py  test_live_mojibake.py  test_metadata_parser_integration.py  (+11 more)
dataset_tools/analysis/: data_models.py  features.py
dataset_tools/config/: rules.toml
dataset_tools/debug_tools/: README.md  debug_extraction_methods.py  debug_jpeg_metadata.py  debug_parser_matching.py  debug_t5_simple.py  debug_t5_traversal.py  enhanced_exif_reader.py  extract_full_usercomment.py  prepare_workflows_for_analysis.py  test_a1111_jpeg_debug.py  test_a1111_simple.py  test_airs.py  test_civitai_mojibake.py  test_civitai_priority_fix.py  test_civitai_structure.py  test_comfyui_detection.py  (+17 more)
debug-analysis/: debug_a1111_detection.py  debug_comfy_advanced.py  debug_comfyui_detection.py  debug_drawthings.py  debug_engine_context.py  debug_forge_rules.py  debug_metadata_test.py  debug_prompt_swap.py  debug_subrules.py  debug_t5_extraction.py  integration-test-simple.py  parser_definitions_debug_metadata_test.py  test_advanced_comfy_fix.py  test_civitai_api_fix.py  test_drawthings_simple.py  test_easydiffusion_fix.py  test_enhanced_extraction.py  test_final_t5_fix.py  test_forge_detection.py  test_gemini_suggestions_implementation.py  test_json_path_query_fix.py  test_metadata_parser_integration.py  test_midjourney_extraction.py  test_sdnext_detection.py  test_swarmui_adobe_fix.py  test_t5_simple.py  ui_debug_script.py  verify_enhancements.py
dev_logs/: Code_Review_PR.txt  dataset-tools-article.md  thingstofix.txt
hooks/: use-data-grid.ts  use-settings.ts
lib/: comfyui-github-search.ts  comfyui-node-registry.ts  data-grid.ts  png-metadata.ts  settings.ts
tests/: analyze_extracted_nodes.py  analyze_tensorart.py  batch_extractor.py  check_additional_samples.py  chroma_parser_real.json  debug_drawthings.py  debug_failed_extraction.py  debug_field_extraction.py  debug_forge_rules.py  debug_jpeg_metadata.py  debug_metadata_test copy.py  debug_t5_extraction.py  debug_t5_simple.py  debug_wildcard_workflow.py  dit_parser_json.json  enhance_existing_parsers.py  enhanced_exif_reader.py  extract_workflow copy.py  extract_workflow.py  find_complex_workflows.py  find_woman_prompt.py  integration-test-simple.py  new_comfyui_extractor_function.py  parser_definitions_debug_metadata_test.py  png_metadata_debug.py  sd15_parser_json.json  smart_rule_discoverer.py  tensorart_patterns.json  tensorart_patterns_analysis.py  test_a1111_jpeg_debug.py  test_a1111_simple.py  test_access_disk.py  test_advanced_parser.py  test_airs.py  test_all_comfyui_files.py  test_civitai_priority_fix.py  test_comfyui_detection.py  test_debug_usercomment.py  test_drawthings_simple.py  test_easydiffusion_fix.py  (+34 more)
types/: metadata.ts  settings.ts
(+939 files in other folders)
