#
[build-system]
requires      = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name            = "dataset-tools"
description     = "An ultralight metadata viewer to help you visualize and edit dataset text."
authors         = [{ name = "Ktiseos Nyx", email = "Dataset-Tools@noreply.github.com" }]
requires-python = ">= 3.10"
license         = { file = "LICENSE" }
readme          = "README.md"
urls            = { source = "https://github.com/orgs/Ktiseos-Nyx/Dataset-Tools" }
dynamic         = ["version"]

keywords = [
    "training",
    "text",
    "images",
    "AI",
    "editing",
    "dataset",
    "metadata",
    "generative",
    "art",
]

dependencies = [
    "rich",
    "pydantic",
    "pillow",
    "PyQt6",
    "typing-extensions; python < 3.11",
    "pydantic-core; python < 3.11",
    "toml; python < 3.11",
]

[project.optional-dependencies]
dev = ["pytest"]
kn  = ["ruff", "pylint"]

[project.scripts]
dataset-tools = "dataset_tools.main:main"

[tool.setuptools_scm]
write_to = "_version.py"

# Personal preferences
[tool.uv]
dev-dependencies = ["pytest"]

[tool.ruff]
line-length    = 120
include        = ["*.py"]
extend-exclude = ["^tests/.*$", "test.*$"]


[tool.pylint]
ignore-paths = ["^tests/.*$", "test_.*$"]

[tool.ruff.format]

[tool.ruff.lint.pycodestyle]
max-line-length               = 120
ignore-overlong-task-comments = true

[tool.typos]
files.extend-exclude = ["^tests/.*$", "test.*$"]
