#
[build-system]
requires      = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name            = "dataset-tools"
description     = "An ultralight metadata viewer to help you visualize and edit dataset text."
authors         = [{ name = "Ktiseos Nyx", email = "Dataset-Tools@noreply.github.com" }]
requires-python = ">= 3.10"
license         = { file = "LICENSE" }
readme          = "README.md"
urls            = { source = "https://github.com/orgs/Ktiseos-Nyx/Dataset-Tools" }
dynamic         = ["version"]

keywords = [
    "training",
    "text",
    "images",
    "AI",
    "editing",
    "dataset",
    "metadata",
    "generative",
    "art",
]
classifiers = [
    "Topic :: Multimedia :: Graphics",
    "Topic :: Multimedia :: Graphics :: Viewers",
    "Topic :: Text Processing :: General",
    "Topic :: Artistic Software",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Intended Audience :: Other Audience",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "License :: CC0 1.0 Universal (CC0 1.0) Public Domain Dedication",
    "Environment :: X11 Applications :: Qt",
]
dependencies = [
    "rich",
    "pydantic",
    "pydantic-core",
    "pillow",
    "PyQt6",
    "toml",
    "typing-extensions",
    "pyexiv2",
    "exif",
    "sd-prompt-reader",  # <--- ADD THIS LINE
]

[project.optional-dependencies]
dev = ["pytest"]
kn  = ["ruff", "pylint"]

[project.scripts]
dataset-tools = "dataset_tools.main:main"

[tool.setuptools_scm]
write_to = "_version.py"

# Personal preferences
[tool.uv]
dev-dependencies = ["pytest"]

[tool.ruff]
line-length    = 120
include        = ["*.py"]
extend-exclude = ["^tests/.*$", "test.*$"]

[tool.pylint]
ignore-paths = ["^tests/.*$", "test_.*$"]

[tool.ruff.format]

[tool.ruff.lint.pycodestyle]
max-line-length               = 120
ignore-overlong-task-comments = true

[tool.typos]
files.extend-exclude = ["^tests/.*$", "test.*$"]
